# ClasshSS

./: .gitignore  ClasshSS.cabal
dist-newstyle/cache/: config
src/: #Reflex.hs#  .#Reflex.hs  Classh.hs
src/Classh/: Box.hs  Color.hs  Cursor.hs  Grid.hs  Setters.hs  Shorthand.hs  Text.hs  TextPosition.hs
src/Classh/Box/: Border.hs  DivInt.hs  Margin.hs  Padding.hs  Placement.hs  Sizing.hs  SizingBand.hs  TWSize.hs
src/Classh/Box/Border/: Color.hs  Radius.hs  Style.hs  Width.hs
src/Classh/Box/Placement/: Align.hs  Justify.hs
src/Classh/Box/Sizing/: BoxSizing.hs  BoxSizingConstraint.hs  DimensionConstraint.hs
src/Classh/Class/: CompileStyle.hs  HasCSSSize.hs  HasCustom.hs  IsCSS.hs  SetSides.hs  ShowTW.hs
src/Classh/Internal/: CSSSize.hs  Chain.hs  TShow.hs  TWNum.hs  Utils.hs
src/Classh/Responsive/: WhenTW.hs  ZipScreens.hs
src/Classh/Text/: Decoration.hs  Font.hs  FontStyle.hs  Size.hs  Weight.hs
src/Classh/Text/Decoration/: LineType.hs  Offset.hs  Style.hs  Thickness.hs
src/Classh/TextPosition/: Clamp.hs  Content.hs  Hyphen.hs  Lead.hs  TAlign.hs  TOverflow.hs  Track.hs  VAlign.hs  WhiteSpace.hs  WordBreak.hs  Wrap.hs
