cabal-version:      2.4
name:               ClasshSS
version:            0.1.0.0
synopsis:
        Typified Tailwind for Rapid Development
-- description:
homepage:           https://github.com/augyg/ClasshSS
license:            MIT
license-file:       LICENSE
author:             Galen Sprout
maintainer:         galen.sprout@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules: Classh
                     Classh.Box
                     Classh.Box.Border
                     Classh.Box.DivInt
                     Classh.Box.Margin
                     Classh.Box.Padding
                     Classh.Box.Placement
                     Classh.Box.Placement.Align
                     Classh.Box.Placement.Justify
                     Classh.Box.Sizing
                     Classh.Box.TWSize
                     Classh.Class.CompileStyle
                     Classh.Class.HasCSSSize
                     Classh.Class.HasCustom
                     Classh.Class.IsCSS
                     Classh.Class.SetSides
                     Classh.Class.ShowTW
                     Classh.Color
                     Classh.Cursor
                     Classh.Grid
                     Classh.Internal.CSSSize
                     Classh.Internal.Chain
                     Classh.Internal.TShow
                     Classh.Internal.TWNum
                     Classh.Internal.Utils
                     Classh.Responsive.WhenTW
                     Classh.Responsive.ZipScreens
                     Classh.Setters
                     Classh.Shorthand
                     Classh.Text
                     Classh.Text.Decoration
                     Classh.Text.Decoration.LineType
                     Classh.Text.Decoration.Offset
                     Classh.Text.Decoration.Style
                     Classh.Text.Decoration.Thickness
                     Classh.Text.Font
                     Classh.Text.FontStyle
                     Classh.Text.Size
                     Classh.Text.Weight

    -- other-modules:
    default-extensions:
        OverloadedStrings
        TemplateHaskell
        LambdaCase
        MultiParamTypeClasses
        FlexibleContexts
    build-depends:    base
                      --^>=4.15.1.0
                    , data-default
                      -->= 0.7.1 && < 0.8
                    , lens
                      -->= 5.2.3 && < 5.3
                    , template-haskell
                      -->= 2.17.0 && < 2.18
                    , text
                      -->= 1.2.5 && < 1.3
    hs-source-dirs:   src
    ghc-options:  -Wno-name-shadowing
    default-language: Haskell2010
